{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 17,
  
  "lineage": "c1057838-4b37-35d0-aa68-23d24559a147",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:218167710596:instance/i-07e55574d09d00b2d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e55574d09d00b2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0abc2f29ffd34da3e"
              }
            ],
            "primary_network_interface_id": "eni-0abc2f29ffd34da3e",
            "private_dns": "ip-10-0-1-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.53",
            "public_ip": "13.220.232.190",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-082eec266501f6aee",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079ec0929c65f7b41",
            "tags": {
              "Environment": "dev",
              "Name": "nodejs-dev-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "nodejs-dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b5518bcfe02d4eb5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "218167710596",
            "id": "i-07e55574d09d00b2d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:218167710596:instance/i-0545e4d85e46d9393",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0545e4d85e46d9393",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a3d00432a12c715b"
              }
            ],
            "primary_network_interface_id": "eni-0a3d00432a12c715b",
            "private_dns": "ip-10-0-1-89.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.89",
            "public_ip": "18.215.240.254",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d996a17700bd383d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079ec0929c65f7b41",
            "tags": {
              "Environment": "prod",
              "Name": "nodejs-prod-server"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "nodejs-prod-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b5518bcfe02d4eb5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "218167710596",
            "id": "i-0545e4d85e46d9393",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218167710596:internet-gateway/igw-0ea5f28686314ee57",
            "id": "igw-0ea5f28686314ee57",
            "owner_id": "218167710596",
            "region": "us-east-1",
            "tags": {
              "Name": "nodejs-igw"
            },
            "tags_all": {
              "Name": "nodejs-igw"
            },
            "vpc_id": "vpc-03a1faf903faaf37c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218167710596:route-table/rtb-0e26ee41a366275a5",
            "id": "rtb-0e26ee41a366275a5",
            "owner_id": "218167710596",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea5f28686314ee57",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nodejs-public-rt"
            },
            "tags_all": {
              "Name": "nodejs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a1faf903faaf37c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "218167710596",
            "id": "rtb-0e26ee41a366275a5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04330120a877a3f0e",
            "region": "us-east-1",
            "route_table_id": "rtb-0e26ee41a366275a5",
            "subnet_id": "subnet-079ec0929c65f7b41"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218167710596:security-group/sg-0b5518bcfe02d4eb5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b5518bcfe02d4eb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "nodejs-sg",
            "name_prefix": "",
            "owner_id": "218167710596",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodejs-sg"
            },
            "tags_all": {
              "Name": "nodejs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a1faf903faaf37c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "218167710596",
            "id": "sg-0b5518bcfe02d4eb5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218167710596:subnet/subnet-079ec0929c65f7b41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079ec0929c65f7b41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218167710596",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "nodejs-public-subnet"
            },
            "tags_all": {
              "Name": "nodejs-public-subnet"
            },
            "vpc_id": "vpc-03a1faf903faaf37c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "218167710596",
            "id": "subnet-079ec0929c65f7b41",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218167710596:vpc/vpc-03a1faf903faaf37c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084170106a0b827b3",
            "default_route_table_id": "rtb-01a9c3e3a8b203e3c",
            "default_security_group_id": "sg-05a0ce9de1576b884",
            "dhcp_options_id": "dopt-051788d6940c203cf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a1faf903faaf37c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a9c3e3a8b203e3c",
            "owner_id": "218167710596",
            "region": "us-east-1",
            "tags": {
              "Name": "nodejs-vpc"
            },
            "tags_all": {
              "Name": "nodejs-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "218167710596",
            "id": "vpc-03a1faf903faaf37c",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}